deprecating funnels in favor of adding container info in place via pipes

--- a/template-pipe.yaml
+++ b/template-pipe.yaml
@@ -9,6 +9,11 @@ spec:
   selector:
     matchLabels:
       app: springboot-logs
+  source:
+    namespace: default
+    pod: app-deployment-2983a99a7be2-8bd
+    container: app-container
+  # logFilePath: /var/log/app.log # TODO optional path to log file for custom configurations
   rules:
     - name: sample-rule
       
