added init pipes function, non-k8s env vars.

--- a/default.env
+++ b/default.env
@@ -2,3 +2,7 @@
 MF_LOG_LEVEL=info
 MF_LOG_REPORTCALLER_STATUS=true
 MF_RUNNING_IN_K8S=false
+MF_RULES_FILEPATH=/opt/mf-config/rules/
+MF_PIPES_FILEPATH=/opt/mf-config/pipes/
+MF_METRIC_EXPORTERS_FILEPATH=/opt/mf-config/metric-exporters/
+MF_LOG_EXPORTERS_FILEPATH=/opt/mf-config/log-exporters/
