--- a/template-pipe.yaml
+++ b/template-pipe.yaml
@@ -17,4 +17,23 @@ spec:
   rules:
     - name: sample-rule
       
-  
+---
+
+apiVersion: metrifuge.com/k8s/v1
+kind: Pipe
+metadata:
+  name: mfpipe-name-2
+  labels:
+    pipe: springboot-logs
+spec:
+  name: sample-name
+  selector:
+    matchLabels:
+      app: springboot-logs
+  source:
+    namespace: default
+    pod: app-deployment-2983a99a7be2-8bd
+    container: app-container
+  # logFilePath: /var/log/app.log # TODO optional path to log file for custom configurations
+  rules:
+    - name: sample-rule
