--- a/template-ruleset.yaml
+++ b/template-ruleset.yaml
@@ -1,8 +1,39 @@
-# not in use right now
 apiVersion: metrifuge.com/k8s/v1
-kind: MFRuleSet
+kind: RuleSet
 metadata:
-  name: mfruleset-name
+  name: mfrule-name
+  labels:
+    app: springboot-logs
+spec:
+  rules:
+  - pattern: "%{WORD:grok-word} %{NUMBER:num1} - %{NUMBER:num2}"
+    action: conditional # | forward | discard | analyze
+    conditional:
+      field1:
+        type: Int64 # | Float64 | String
+      grokKey: "num1" # run with best effort ParseInt, meaning a string value "abc" will return 0 and value "9w832" will return 9
+      operator: LessThan # | Equals | DoesNotEqual| Exists | DoesNotExist | GreaterThan | GreaterThanOrEqualTo | ...
+      field2:
+        type: Int64
+        manualValue: 700
+      actionTrue: analyze
+      actionFalse: discard # Could also be 'conditional' or the others
+    metrics:
+    - name: "myMetrics.MetricName" # will be checked against program metric set
+      kind: Int64Counter # | <insert other metric types here>...
+      value:
+        grokKey: "grok-word" # or, a manual value can be added shown below
+      # manualValue: 1
+        type: Int64
+      attributes:
+      - name: important-number
+        value:
+          grokKey: "num2"
+---
+apiVersion: metrifuge.com/k8s/v1
+kind: RuleSet
+metadata:
+  name: mfrule-name-2
   labels:
     app: springboot-logs
 spec:
@@ -10,33 +41,27 @@ spec:
     matchLabels:
       app: springboot-logs
   rules:
-    - name: sample-name
-      # kind: grok # or regex; right now, only grok rules allowed
-      spec:
-        pattern: "%{WORD:grok-word} %{NUMBER:num1} - %{NUMBER:num2}"
-        action: conditional # | forward | discard | analyze
-        conditional:
-          field1:
-            type: Int64 # | Float64 | String
-            grokKey: "num1" # run with best effort ParseInt, meaning a string value "abc" will return 0 and value "9w832" will return 9
-          operator: LessThan # | Equals | DoesNotEqual| Exists | DoesNotExist | GreaterThan | GreaterThanOrEqualTo | ...
-          field2:
-            type: Int64
-            manualValue: 700
-          actionTrue: analyze
-          actionFalse: discard # Could also be 'conditional' or the others
-        metrics:
-          - name: "myMetrics.MetricName" # will be checked against program metric set
-            kind: Int64Counter # | <insert other metric types here>...
-            value:
-              grokKey: "grok-word" # or, a manual value can be added shown below
-            # manualValue: 1
-              type: Int64 
-            attributes:
-              - name: important-number
-                value:
-                  grokKey: "num2"
-
-
-
-
+  - pattern: "%{WORD:grok-word} %{NUMBER:num1} - %{NUMBER:num2}"
+    action: conditional # | forward | discard | analyze
+    conditional:
+      field1:
+        type: Int64 # | Float64 | String
+        grokKey: "num1" # run with best effort ParseInt, meaning a string value "abc" will return 0 and value "9w832" will return 9
+      operator: LessThan # | Equals | DoesNotEqual| Exists | DoesNotExist | GreaterThan | GreaterThanOrEqualTo | ...
+      field2:
+        type: Int64
+        manualValue: 700
+      actionTrue: analyze
+      actionFalse: discard # Could also be 'conditional' or the others
+    createMetrics: true
+    metrics:
+    - name: "myMetrics.MetricName" # will be checked against program metric set
+      kind: Int64Counter # | <insert other metric types here>...
+      value:
+        grokKey: "grok-word" # or, a manual value can be added shown below
+      # manualValue: 1
+        type: Int64
+      attributes:
+      - name: important-number
+        value:
+          grokKey: "num2"
