--- a/k8s/crds/logsource.crd.yaml
+++ b/k8s/crds/logsource.crd.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app.kubernetes.io/name: metrifuge
     app.kubernetes.io/instance: metrifuge
-    app.kubernetes.io/version: "v1"
+    app.kubernetes.io/version: "v1alpha1"
     app.kubernetes.io/component: crd
     app.kubernetes.io/part-of: metrifuge
 spec:
@@ -19,7 +19,7 @@ spec:
       - ls
   scope: Namespaced
   versions:
-    - name: v1
+    - name: v1alpha1
       served: true
       storage: true
       schema:
@@ -29,13 +29,8 @@ spec:
             spec:
               type: object
               required:
-                - type
                 - source
               properties:
-                type:
-                  type: string
-                  description: Type of the log source
-                  enum: [PodSource, PVCSource, LocalSource, CmdSource]
                 source:
                   type: object
                   required:
@@ -72,6 +67,7 @@ spec:
                           type: object
                           required:
                             - name
+                            - namespace
                             - container
                           properties:
                             name:
@@ -80,6 +76,9 @@ spec:
                             container:
                               type: string
                               description: Name of the container within the Pod
+                            namespace:
+                              type: string
+                              description: Namespace of the Pod
                     localSource:
                       type: object
                       properties:
