--- a/mf-pod.yaml
+++ b/mf-pod.yaml
@@ -8,7 +8,8 @@ metadata:
   namespace: metrifuge
 spec:
   containers:
-    - image: metrifuge:20251005-0059
+    - image: |-
+        metrifuge:20251019-2126
       name: metrifuge-test
       resources: {}
   dnsPolicy: ClusterFirst
